Try to make TravisCI happy

--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "test:chrome:debug": "karma start --auto-watch --no-single-run --browsers=Chrome",
     "test:edge": "karma start --single-run --browsers=Edge",
     "test:firefox": "karma start --single-run --browsers=Firefox",
-    "test:ci": "npm run lint && npm run test:chrome:ci && npm run test:firefox && npm run coveralls",
-    "test:ci:win": "npm run lint && npm run test:chrome:ci && npm run test:firefox && npm run coveralls:win",
+    "test:ci": "npm run lint && npm run build && npm run test:chrome:ci && npm run test:firefox && npm run coveralls",
+    "test:ci:win": "npm run lint && npm run build && npm run test:chrome:ci && npm run test:firefox && npm run coveralls:win",
     "test:all": "npm run test:chrome && npm run test:edge && npm run test:firefox",
     "test:coverage": "npm run test:chrome:ci && npm run coveralls",
     "test:coverage:win": "npm run test:chrome:ci && npm run coveralls:win",
