--- a/demos/copyItemInfo/package.json
+++ b/demos/copyItemInfo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "copyItemInfo",
-  "version": "4.1.2-alpha.0",
+  "version": "4.1.2",
   "description": "copyItemInfo demo",
   "author": "Esri",
   "license": "Apache-2.0",
@@ -21,7 +21,7 @@
     "@esri/hub-initiatives": "^13.0.0",
     "@esri/hub-sites": "^13.0.1",
     "@esri/hub-teams": "^13.0.0",
-    "@esri/solution-common": "^4.1.2-alpha.0",
+    "@esri/solution-common": "^4.1.2",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.1",
     "style-loader": "^3.3.3",
