--- a/packages/deployer/package.json
+++ b/packages/deployer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esri/solution-deployer",
-  "version": "4.1.2-alpha.0",
+  "version": "4.1.2",
   "description": "Manages the deployment of a Solution for @esri/solution.js.",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -27,16 +27,16 @@
     "@esri/hub-initiatives": "^13.0.0",
     "@esri/hub-sites": "^13.0.1",
     "@esri/hub-teams": "^13.0.0",
-    "@esri/solution-common": "^4.1.2-alpha.0",
-    "@esri/solution-feature-layer": "^4.1.2-alpha.0",
-    "@esri/solution-file": "^4.1.2-alpha.0",
-    "@esri/solution-form": "^4.1.2-alpha.0",
-    "@esri/solution-group": "^4.1.2-alpha.0",
-    "@esri/solution-hub-types": "^4.1.2-alpha.0",
-    "@esri/solution-simple-types": "^4.1.2-alpha.0",
-    "@esri/solution-storymap": "^4.1.2-alpha.0",
-    "@esri/solution-velocity": "^4.1.2-alpha.0",
-    "@esri/solution-web-experience": "^4.1.2-alpha.0",
+    "@esri/solution-common": "^4.1.2",
+    "@esri/solution-feature-layer": "^4.1.2",
+    "@esri/solution-file": "^4.1.2",
+    "@esri/solution-form": "^4.1.2",
+    "@esri/solution-group": "^4.1.2",
+    "@esri/solution-hub-types": "^4.1.2",
+    "@esri/solution-simple-types": "^4.1.2",
+    "@esri/solution-storymap": "^4.1.2",
+    "@esri/solution-velocity": "^4.1.2",
+    "@esri/solution-web-experience": "^4.1.2",
     "rollup": "2.79.1",
     "sinon": "^15.2.0"
   },
