--- a/packages/file/package.json
+++ b/packages/file/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esri/solution-file",
-  "version": "4.1.2-alpha.0",
+  "version": "4.1.2",
   "description": "Manages the creation and deployment of item types that contain files for @esri/solution.js.",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -27,7 +27,7 @@
     "@esri/hub-initiatives": "^13.0.0",
     "@esri/hub-sites": "^13.0.1",
     "@esri/hub-teams": "^13.0.0",
-    "@esri/solution-common": "^4.1.2-alpha.0",
+    "@esri/solution-common": "^4.1.2",
     "rollup": "2.79.1"
   },
   "dependencies": {
