--- a/packages/web-experience/package.json
+++ b/packages/web-experience/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esri/solution-web-experience",
-  "version": "4.1.2-alpha.0",
+  "version": "4.1.2",
   "description": "Manages the creation and deployment of Web Experience item types for @esri/solution.js.",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -25,8 +25,8 @@
     "@esri/arcgis-rest-service-admin": "^3.6.0",
     "@esri/hub-common": "^13.4.1",
     "@esri/hub-initiatives": "^13.0.0",
-    "@esri/solution-common": "^4.1.2-alpha.0",
-    "@esri/solution-simple-types": "^4.1.2-alpha.0",
+    "@esri/solution-common": "^4.1.2",
+    "@esri/solution-simple-types": "^4.1.2",
     "rollup": "2.79.1"
   },
   "dependencies": {
