--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "test:chrome:debug": "karma start --auto-watch --no-single-run --browsers=Chrome",
     "test:edge": "karma start --single-run --browsers=Edge",
     "test:firefox": "karma start --single-run --browsers=Firefox",
-    "test:ci": "npm run lint && npm run build && npm run test:chrome:ci && npm run test:firefox && npm run coveralls -v",
+    "test:ci": "npm run lint && npm run build && npm run test:chrome:ci && npm run test:firefox && npm run coveralls",
     "test:ci:win": "npm run lint && npm run build && npm run test:chrome:ci && npm run test:firefox && npm run coveralls:win",
     "test:all": "npm run test:chrome && npm run test:edge && npm run test:firefox",
-    "test:coverage": "npm run test:chrome:ci && npm run coveralls -v",
+    "test:coverage": "npm run test:chrome:ci && npm run coveralls",
     "test:coverage:win": "npm run test:chrome:ci && npm run coveralls:win",
     "coveralls": "cat coverage/lcov/lcov.info | node node_modules/coveralls/bin/coveralls",
     "coveralls:win": "start cmd.exe /c \"type coverage\\lcov\\lcov.info | node node_modules/coveralls/bin/coveralls.js\"",
