Add verbose coveralls

--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "test:all": "npm run test:chrome && npm run test:edge && npm run test:firefox",
     "test:coverage": "npm run test:chrome:ci && npm run coveralls",
     "test:coverage:win": "npm run test:chrome:ci && npm run coveralls:win",
-    "coveralls": "cat coverage/lcov/lcov.info | node node_modules/coveralls/bin/coveralls",
-    "coveralls:win": "start cmd.exe /c \"type coverage\\lcov\\lcov.info | node node_modules/coveralls/bin/coveralls.js\"",
+    "coveralls": "cat coverage/lcov/lcov.info | node node_modules/coveralls/bin/coveralls -v",
+    "coveralls:win": "start cmd.exe /c \"type coverage\\lcov\\lcov.info | node node_modules/coveralls/bin/coveralls.js -v\"",
     "docs:build": "typedoc",
     "docs:deploy": "node support/deploy-doc-site.js",
     "release:prepare1": "git fetch --all && start cmd.exe /c \"build.bat\"",
