Switch to Codecov

--- a/package.json
+++ b/package.json
@@ -29,19 +29,12 @@
     "prettify": "prettier --write \"packages/**/+(src|test)/**/*.ts\"",
     "getupdates": "npm-check-updates --upgrade",
     "test": "npm run lint && npm run test:chrome",
-    "test:browsers": "karma start --single-run --browsers Chrome,Firefox,Edge",
+    "test:chrome:debug": "karma start --auto-watch --no-single-run --browsers=Chrome",
     "test:chrome": "karma start --single-run --browsers=Chrome",
     "test:chrome:ci": "karma start --single-run --browsers ChromeHeadlessCI karma.conf.js",
-    "test:chrome:debug": "karma start --auto-watch --no-single-run --browsers=Chrome",
-    "test:edge": "karma start --single-run --browsers=Edge",
     "test:firefox": "karma start --single-run --browsers=Firefox",
-    "test:ci": "npm run lint && npm run build && npm run test:chrome:ci && npm run test:firefox && npm run coveralls",
-    "test:ci:win": "npm run lint && npm run build && npm run test:chrome:ci && npm run test:firefox && npm run coveralls:win",
-    "test:all": "npm run test:chrome && npm run test:edge && npm run test:firefox",
-    "test:coverage": "npm run test:chrome:ci && npm run coveralls",
-    "test:coverage:win": "npm run test:chrome:ci && npm run coveralls:win",
-    "coveralls": "cat coverage/lcov/lcov.info | node node_modules/coveralls/bin/coveralls",
-    "coveralls:win": "start cmd.exe /c \"type coverage\\lcov\\lcov.info | node node_modules/coveralls/bin/coveralls.js\"",
+    "test:firefox:ci": "karma start --single-run --browsers=FirefoxHeadless",
+    "test:all": "npm run test:chrome && npm run test:firefox",
     "docs:build": "typedoc",
     "docs:deploy": "node support/deploy-doc-site.js",
     "release:prepare1": "git fetch --all && start cmd.exe /c \"build.bat\"",
@@ -77,7 +70,6 @@
     "cheerio": "^1.0.0-rc.12",
     "concurrently": "^8.2.0",
     "core-js": "^3.30.2",
-    "coveralls": "^3.1.1",
     "cpx": "^1.5.0",
     "cross-spawn": "^7.0.3",
     "date-fns": "^2.29.2",
