--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,14 @@
+os: linux
+dist: jammy
 language: node_js
 node_js:
-  - "16"
+  - 18
 cache: npm
+before_install:
+  - npm update
+install:
+  - npm install
+  - npm run build
 script:
   - npm run test:ci
 env:
