--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
+os: linux
+dist: jammy
 language: node_js
 node_js:
-  - "16"
+  - 18
 cache: npm
+before_install:
+  - npm update
+install:
+  - npm install
 script:
-  - npm run test:ci
+  - npm run build
 env:
   - MOZ_HEADLESS=1
 addons:
