--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "release:publish-git": "bash ./support/publish.sh",
     "release:publish-npm": "lerna publish from-package --force-publish=* --no-git-tag-version --no-push --yes --no-git-reset",
     "release:publish-retry": "lerna publish from-package --no-git-tag-version --no-push --yes",
+    "postinstall": "npm run bootstrap",
+    "bootstrap": "lerna bootstrap",
     "precommit": "lint-staged"
   },
   "publishConfig": {
@@ -97,7 +99,7 @@
     "karma-spec-reporter": "0.0.36",
     "karma-typescript": "^5.5.4",
     "karma-typescript-es6-transform": "^5.5.4",
-    "lerna": "^7.1.4",
+    "lerna": "^6.6.2",
     "lint-staged": "^13.2.2",
     "marked": "^5.0.4",
     "minimatch": "^9.0.1",
