--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "lint:staged": "npx lint-staged",
+    "unused-packages": "npx depcheck",
     "prettify": "prettier --write \"packages/**/+(src|test)/**/*.ts\"",
     "getupdates": "npm-check-updates --upgrade",
     "test": "npm run lint && npm run test:chrome",
@@ -43,13 +44,26 @@
     "release:publish-git": "bash ./support/publish.sh",
     "release:publish-npm": "lerna publish from-package --force-publish=* --no-git-tag-version --no-push --yes --no-git-reset",
     "release:publish-retry": "lerna publish from-package --no-git-tag-version --no-push --yes",
-    "postinstall": "npm run bootstrap",
-    "bootstrap": "lerna bootstrap",
     "precommit": "lint-staged"
   },
   "publishConfig": {
     "access": "public"
   },
+  "workspaces": [
+    "packages/common",
+    "packages/creator",
+    "packages/deployer",
+    "packages/feature-layer",
+    "packages/file",
+    "packages/form",
+    "packages/group",
+    "packages/hub-types",
+    "packages/simple-types",
+    "packages/storymap",
+    "packages/velocity",
+    "packages/viewer",
+    "packages/web-experience"
+  ],
   "devDependencies": {
     "@chiragrupani/karma-chromium-edge-launcher": "^2.3.1",
     "@octokit/rest": "^20.0.1",
@@ -59,10 +73,10 @@
     "@semantic-release/commit-analyzer": "^10.0.1",
     "@types/fetch-mock": "^7.3.5",
     "@types/jasmine": "^4.3.4",
-    "@types/node": "^20.5.7",
+    "@types/node": "^20.5.9",
     "@types/sinon": "^10.0.16",
-    "@typescript-eslint/eslint-plugin": "^6.1.0",
-    "@typescript-eslint/parser": "^6.2.1",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
     "acorn": "^8.8.2",
     "acorn-walk": "^8.2.0",
     "adlib": "^3.0.8",
@@ -77,11 +91,11 @@
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.0",
-    "eslint-plugin-jsdoc": "^46.4.6",
+    "eslint-plugin-jsdoc": "^46.5.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "event-stream": "^4.0.1",
     "fetch-mock": "^7.7.3",
-    "gh-pages": "^5.0.0",
+    "gh-pages": "^6.0.0",
     "gh-release": "^7.0.2",
     "handlebars": "^4.7.7",
     "http-cache-semantics": "^4.1.1",
@@ -99,8 +113,8 @@
     "karma-spec-reporter": "0.0.36",
     "karma-typescript": "^5.5.4",
     "karma-typescript-es6-transform": "^5.5.4",
-    "lerna": "^6.6.2",
-    "lint-staged": "^13.2.2",
+    "lerna": "^7.2.0",
+    "lint-staged": "^14.0.1",
     "marked": "^7.0.2",
     "minimatch": "^9.0.1",
     "prettier": "^3.0.1",
@@ -117,15 +131,10 @@
     "sri-toolbox": "0.2.0",
     "ts-node": "^10.9.1",
     "typedoc": "^0.25.0",
-    "typescript": "^5.1.6",
+    "typescript": "^5.2.2",
     "ua-parser-js": "^1.0.35",
     "ultra-runner": "^3.10.5",
     "uuid": "^9.0.0"
-  },
-  "dependencies": {
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-globals": "^1.4.0",
-    "tslib": "1.14.1"
   },
   "lint-staged": {
     "packages/**/*.ts": [
