Remove unused packages

--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -33,6 +33,10 @@
     "@esri/solution-group": "^5.0.1",
     "@esri/solution-simple-types": "^5.0.1",
     "@esri/solution-storymap": "^5.0.1",
+    "@types/jasmine": "^4.3.4",
+    "fetch-mock": "^7.7.3",
+    "jasmine": "^5.1.0",
+    "jasmine-core": "^5.1.0",
     "rollup": "2.79.1"
   },
   "dependencies": {
