--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "lint:staged": "npx lint-staged",
-    "unused-packages": "npx depcheck",
     "prettify": "prettier --write \"packages/**/+(src|test)/**/*.ts\"",
     "getupdates": "npm-check-updates --upgrade",
     "test": "npm run lint && npm run test:chrome",
@@ -66,43 +65,17 @@
   ],
   "devDependencies": {
     "@chiragrupani/karma-chromium-edge-launcher": "^2.3.1",
-    "@octokit/rest": "^20.0.1",
-    "@rollup/plugin-commonjs": "^25.0.4",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.1.0",
-    "@semantic-release/commit-analyzer": "^10.0.1",
-    "@types/fetch-mock": "^7.3.5",
-    "@types/jasmine": "^4.3.4",
     "@types/node": "^20.5.9",
-    "@types/sinon": "^10.0.16",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
-    "acorn": "^8.8.2",
-    "acorn-walk": "^8.2.0",
-    "adlib": "^3.0.8",
-    "changelog-parser": "^3.0.1",
-    "cheerio": "^1.0.0-rc.12",
-    "concurrently": "^8.2.0",
-    "core-js": "^3.32.0",
-    "cpx": "^1.5.0",
-    "cross-spawn": "^7.0.3",
-    "date-fns": "^2.29.2",
-    "es6-promise": "^4.2.8",
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-jsdoc": "^46.5.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "event-stream": "^4.0.1",
-    "fetch-mock": "^7.7.3",
     "gh-pages": "^6.0.0",
-    "gh-release": "^7.0.2",
-    "handlebars": "^4.7.7",
-    "http-cache-semantics": "^4.1.1",
     "isomorphic-fetch": "^3.0.0",
     "isomorphic-form-data": "^2.0.0",
-    "jasmine": "^5.1.0",
-    "jasmine-core": "^5.1.0",
     "karma": "^6.4.2",
     "karma-chrome-launcher": "^3.2.0",
     "karma-coverage": "^2.2.1",
@@ -115,26 +88,11 @@
     "karma-typescript-es6-transform": "^5.5.4",
     "lerna": "^7.2.0",
     "lint-staged": "^14.0.1",
-    "marked": "^7.0.2",
-    "minimatch": "^9.0.1",
     "prettier": "^3.0.1",
-    "regenerator-runtime": "^0.13.10",
-    "resolve": "^1.22.4",
-    "rollup": "2.79.1",
-    "rollup-plugin-filesize": "^10.0.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.35.0",
-    "semantic-release": "^21.1.1",
-    "shelljs": "^0.8.5",
-    "sinon": "^15.2.0",
-    "slug": "^8.0.0",
-    "sri-toolbox": "0.2.0",
     "ts-node": "^10.9.1",
     "typedoc": "^0.25.0",
     "typescript": "^5.2.2",
-    "ua-parser-js": "^1.0.35",
-    "ultra-runner": "^3.10.5",
-    "uuid": "^9.0.0"
+    "ultra-runner": "^3.10.5"
   },
   "lint-staged": {
     "packages/**/*.ts": [
