--- a/packages/creator/package.json
+++ b/packages/creator/package.json
@@ -37,6 +37,10 @@
     "@esri/solution-storymap": "^5.0.1",
     "@esri/solution-velocity": "^5.0.1",
     "@esri/solution-web-experience": "^5.0.1",
+    "@types/jasmine": "^4.3.4",
+    "fetch-mock": "^7.7.3",
+    "jasmine": "^5.1.0",
+    "jasmine-core": "^5.1.0",
     "rollup": "2.79.1",
     "sinon": "^15.2.0"
   },
