--- a/packages/hub-types/package.json
+++ b/packages/hub-types/package.json
@@ -28,6 +28,10 @@
     "@esri/hub-sites": "^13.0.1",
     "@esri/hub-teams": "^13.0.0",
     "@esri/solution-common": "^5.0.1",
+    "@types/jasmine": "^4.3.4",
+    "fetch-mock": "^7.7.3",
+    "jasmine": "^5.1.0",
+    "jasmine-core": "^5.1.0",
     "rollup": "2.79.1"
   },
   "dependencies": {
