--- a/packages/storymap/package.json
+++ b/packages/storymap/package.json
@@ -24,6 +24,10 @@
     "@esri/arcgis-rest-request": "^3.6.0",
     "@esri/hub-common": "^13.46.2",
     "@esri/solution-common": "^5.0.1",
+    "@types/jasmine": "^4.3.4",
+    "fetch-mock": "^7.7.3",
+    "jasmine": "^5.1.0",
+    "jasmine-core": "^5.1.0",
     "rollup": "2.79.1"
   },
   "dependencies": {
