--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "test:all": "npm run test:chrome && npm run test:firefox",
     "docs:build": "typedoc",
     "docs:deploy": "node support/deploy-doc-site.js",
+    "docs:srihash": "node docs/generate-srihashes.js",
     "release:prepare1": "git fetch --all && start cmd.exe /c \"build.bat\"",
     "release:prepare2": "lerna publish --no-git-tag-version --no-push --skip-npm --yes",
     "release:review": "git --no-pager diff --word-diff",
@@ -90,6 +91,7 @@
     "lerna": "^7.2.0",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.1",
+    "sri-toolbox": "^0.2.0",
     "ts-node": "^10.9.1",
     "typedoc": "^0.25.0",
     "typescript": "^5.2.2",
