--- a/packages/deployer/package.json
+++ b/packages/deployer/package.json
@@ -25,7 +25,7 @@
     "@esri/arcgis-rest-service-admin": "^3.7.0",
     "@esri/hub-common": "^13.46.2",
     "@esri/hub-initiatives": "^13.0.0",
-    "@esri/hub-sites": "^13.0.1",
+    "@esri/hub-sites": "^13.1.0",
     "@esri/hub-teams": "^13.0.0",
     "@esri/solution-common": "^5.0.9",
     "@esri/solution-feature-layer": "^5.0.9",
@@ -41,7 +41,7 @@
     "fetch-mock": "^7.7.3",
     "jasmine": "^5.1.0",
     "jasmine-core": "^5.1.0",
-    "rollup": "2.79.1",
+    "rollup": "^3.29.4",
     "sinon": "^15.2.0"
   },
   "dependencies": {
