--- a/packages/storymap/package.json
+++ b/packages/storymap/package.json
@@ -28,7 +28,7 @@
     "fetch-mock": "^7.7.3",
     "jasmine": "^5.1.0",
     "jasmine-core": "^5.1.0",
-    "rollup": "2.79.1"
+    "rollup": "^3.29.4"
   },
   "dependencies": {
     "tslib": "1.14.1"
