--- a/demos/copySolutions/package.json
+++ b/demos/copySolutions/package.json
@@ -26,6 +26,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.1",
+    "postcss": "^8.4.31",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
