--- a/demos/deploySolution/package.json
+++ b/demos/deploySolution/package.json
@@ -36,6 +36,7 @@
     "@esri/solution-web-experience": "^5.0.11",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.1",
+    "postcss": "^8.4.31",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
