--- a/package.json
+++ b/package.json
@@ -65,10 +65,15 @@
     "packages/web-experience"
   ],
   "devDependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-typescript": "^7.23.2",
+    "@babel/types": "^7.23.0",
     "@chiragrupani/karma-chromium-edge-launcher": "^2.3.1",
     "@types/node": "^20.8.0",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.4",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
