--- a/demos/copySolutions/package.json
+++ b/demos/copySolutions/package.json
@@ -27,7 +27,7 @@
     "postcss": "^8.4.32",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.5.1",
-    "typescript": "^5.2.2",
+    "typescript": "~5.2.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
